--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
       <h1>Кузнецова Вероника Максимовна - Лабораторная работа №9</h1>
+      <script src = "main.js"></script>
   </body>
 </html>
