--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
 	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-  </head>
+	<link rel="stylesheet" href="style.css">
+</head>
   <body>
+		<header>
+			<dialog class="Mydialog">
+					<form class = "FormRegistr">
+							<label><input type="email" placeholder="Email" name="email" id="email" required></label>
+							<label><input type="password" placeholder="Password" minlength="6" name="password" id="password" required></label>
+							<div id = "error"></div>
+							<button class="b01" type="submit">SEND</button>
+							<button class="b01" type="button">SHOW PASSWORD</button>
+					</form> 
+			</dialog>
+			<button class="Mydialog_open">Registration</button>
+	</header>
+
       <h1>Кузнецова Вероника Максимовна - Лабораторная работа №9</h1>
       <script src = "main.js"></script>
   </body>
