--- a/index.html
+++ b/index.html
@@ -1,26 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My first three.js app</title>
 </head>
-  <body>
-		<header>
-			<dialog class="Mydialog">
-					<form class = "FormRegistr">
-							<label><input type="email" placeholder="Email" name="email" id="email" required></label>
-							<label><input type="password" placeholder="Password" minlength="6" name="password" id="password" required></label>
-							<div id = "error"></div>
-							<button class="b01" type="submit">SEND</button>
-							<button class="b01" type="button">SHOW PASSWORD</button>
-					</form> 
-			</dialog>
-			<button class="Mydialog_open">Registration</button>
-	</header>
-
-      <h1>Кузнецова Вероника Максимовна - Лабораторная работа №9</h1>
-      <script src = "main.js"></script>
-  </body>
+<body>
+    <h1>Three.js</h1>
+    <ul>
+        <li><a href="example1.html">Пример модели</a></li>
+    </ul>
+</body>
 </html>
